--- a/1.0.0/c7dq63.md
+++ b/1.0.0/c7dq63.md
@@ -5,7 +5,7 @@
 
 ## Checklist Áp Dụng DDD Trong Dự Án Legacy
 
-| ✅ Việc cần làm                     | Công cụ                                      |
+| Việc cần làm                     | Công cụ                                      |
 |----------------------------------|----------------------------------------------|
 | Hiểu chiến lược và domain        | Phỏng vấn stakeholders, org chart            |
 | Phân loại subdomain              | Core / Supporting / Generic                  |
@@ -16,26 +16,26 @@
 
 ## Modernization Strategy
 
-- Những nỗ lực “viết lại toàn bộ” hệ thống từ đầu – với kỳ vọng lần này sẽ thiết kế và triển khai mọi thứ một cách đúng đắn – hiếm khi thành công
-- Refactor module theo subdomain là dạng refactor an toàn, vì không đụng đến logic nghiệp vụ, chỉ sắp xếp lại mã nguồn hợp lý hơn
+- Những nỗ lực **viết lại toàn bộ** hệ thống từ đầu – với kỳ vọng lần này sẽ thiết kế và triển khai mọi thứ một cách đúng đắn – hiếm khi thành công
+- **Modernization Strategy** là dạng refactor an toàn, vì không đụng đến logic nghiệp vụ, chỉ sắp xếp lại mã nguồn hợp lý hơn
 
 ## Tactical Modernization
 
-- Trên góc độ tactical, hãy tìm những phần gây "đau đớn" nhất – nơi giá trị nghiệp vụ cao nhưng thiết kế kỹ thuật kém
+- tìm những phần gây **đau đớn** nhất – nơi **giá trị nghiệp vụ cao** nhưng **thiết kế kỹ thuật kém**
 
 ## Ubiquitous Language
 
-- Một điều kiện quan trọng để hiện đại hóa thành công là kiến thức domain phải rõ ràng, và có mô hình thể hiện chính xác -> EventStorming
+- Một điều kiện quan trọng để hiện đại hóa thành công là kiến thức domain phải rõ ràng, và có mô hình thể hiện chính xác -> **EventStorming**
 
 ## Strangler Pattern
 
 - là một loài cây nhiệt đới có cách sinh trưởng đặc biệt: chúng mọc bám vào thân cây khác – cây chủ. Hạt giống bắt đầu nảy mầm ở tán cây chủ, rồi mọc rễ dần xuống đất. Khi đã bén rễ, cây strangler tiếp tục phát triển, tán lá của nó che khuất cây chủ – cuối cùng khiến cây chủ chết dần.
-- (Strangler Pattern) lấy cảm hứng từ quy luật sinh trưởng đó
-    - Tạo một bounded context mới – gọi là "strangler".
+- **Strangler Pattern** lấy cảm hứng từ quy luật sinh trưởng đó
+    - Tạo một bounded context mới – gọi là `strangler`.
     - Sử dụng nó để triển khai các yêu cầu mới.
     - Dần dần di chuyển logic cũ từ hệ thống legacy sang bounded context mới.
     - Trong quá trình đó, dừng phát triển hệ thống cũ (trừ các hotfix khẩn cấp).
-- Khi toàn bộ chức năng đã được chuyển sang bounded context mới, hệ thống cũ có thể bị “khai tử” – giống như cây chủ bị cây strangler làm chết dần.
+- Khi toàn bộ chức năng đã được chuyển sang bounded context mới, hệ thống cũ có thể bị *khai tử* – giống như cây chủ bị cây strangler làm chết dần.
 - Mẫu Strangler thường đi kèm với Façade Pattern – một lớp trừu tượng mỏng, đứng ra nhận yêu cầu và chuyển tiếp sang hệ thống mới hoặc cũ tùy theo chức năng đã được migrate hay chưa.
 - database dùng chung chỉ là tạm thời, và phải được tách riêng khi hệ thống cũ đã bị loại bỏ.
 
@@ -47,39 +47,39 @@
 - mối quan hệ giữa microservices và bounded contexts không phải là đối xứng. Mặc dù microservices là bounded contexts, không phải mọi bounded context đều là microservice.
 - Trong khi bounded contexts đặt giới hạn cho các ranh giới lớn nhất hợp lệ, mẫu aggregate làm điều ngược lại. Ranh giới của aggregate là ranh giới hẹp nhất có thể
     - microservices không phải về các dịch vụ cá nhân. Một dịch vụ cá nhân phải được xem xét trong ngữ cảnh của các tương tác với các thành phần khác trong hệ thống
-    - Sẽ có những trường hợp trong đó việc có một aggregate như một dịch vụ sẽ tạo ra một thiết kế mô-đun. Tuy nhiên, thường xuyên hơn, các dịch vụ chi tiết như vậy sẽ làm tăng độ phức tạp toàn cầu của hệ thống.
+    - Sẽ có những trường hợp trong đó việc có một aggregate như một dịch vụ sẽ tạo ra một **module**. Tuy nhiên, thường xuyên hơn, các dịch vụ chi tiết như vậy sẽ làm tăng độ phức tạp toàn cầu của hệ thống.
 - subdomains trở thành một ranh giới an toàn để thiết kế microservices.
 
 # Event driven architecture
 
-- Mặc dù cả kiến trúc dựa trên sự kiện và event sourcing đều dựa trên sự kiện, nhưng hai mẫu thiết kế này là khác biệt về mặt khái niệm. EDA liên quan đến giao tiếp giữa các dịch vụ, trong khi event sourcing xảy ra bên trong một dịch vụ
-    - Một schema sự kiện điển hình bao gồm metadata của sự kiện và payload của nó
-    - Payload của một sự kiện không chỉ mô tả thông tin được truyền tải bởi sự kiện mà còn xác định loại sự kiện đó
+- Mặc dù cả kiến trúc dựa trên *event* và event sourcing đều dựa trên *event*, nhưng hai mẫu thiết kế này là khác biệt về mặt khái niệm. EDA liên quan đến giao tiếp giữa các dịch vụ, trong khi event sourcing xảy ra bên trong một dịch vụ
+    - Một event schema điển hình bao gồm metadata của sự kiện và payload của nó
+    - Payload của một *event* không chỉ mô tả thông tin được truyền tải bởi *event* mà còn xác định loại *event* đó
 
 ## Type of event
 
-- Event Notification
-    - Thông báo sự kiện nên ngắn gọn: mục tiêu là thông báo cho các bên quan tâm về sự kiện, nhưng không nên truyền tải tất cả thông tin cần thiết để các bên đó phản hồi
+- **Event Notification**
+    - Thông báo *event* nên ngắn gọn: mục tiêu là thông báo cho các bên quan tâm về *event*, nhưng không nên truyền tải tất cả thông tin cần thiết để các bên đó phản hồi
     - Khi nào nên dùng
-        - Security: Vì người nhận phải chủ động truy vấn dữ liệu, nên có thể kiểm soát quyền truy cập vào thông tin nhạy cảm
-        - Concurrency: 
+        - *Security*: Vì người nhận phải chủ động truy vấn dữ liệu, nên có thể kiểm soát quyền truy cập vào thông tin nhạy cảm
+        - *Concurrency*: 
             - dữ liệu có thể đã lỗi thời khi đến tay người nhận. Yêu cầu người nhận truy vấn lại giúp đảm bảo lấy dữ liệu mới nhất. 
-            - có thể dùng thêm pessimistic locking để đảm bảo chỉ một consumer xử lý sự kiện.
-- Event-Carried State Transfer - ECST
+            - có thể dùng thêm *pessimistic locking* để đảm bảo chỉ một consumer xử lý *event*.
+- **Event-Carried State Transfer** - ECST
     - Thông điệp ECST thông báo về thay đổi trong trạng thái nội bộ của nhà sản xuất (producer). Không giống event notification, ECST chứa đầy đủ dữ liệu mô tả thay đổi.
     - Về mặt khái niệm, đây là một cơ chế đồng bộ hóa dữ liệu bất đồng bộ giữa producer và consumer.
     - Tăng khả năng chịu lỗi: consumer có thể tiếp tục hoạt động ngay cả khi producer không sẵn sàng.
     - Cải thiện hiệu năng: thay vì phải truy vấn liên tục, dữ liệu đã được cache cục bộ.
-- Domain Event
-    - domain event nằm giữa event notification và ECST: nó mô tả một sự kiện quan trọng trong nghiệp vụ và chứa tất cả dữ liệu mô tả sự kiện đó.
+- **Domain Event**
+    - domain event nằm giữa event notification và ECST: nó mô tả một *event* quan trọng trong nghiệp vụ và chứa tất cả dữ liệu mô tả *event* đó.
     - Domain event chứa đầy đủ thông tin. Không cần hành động thêm từ consumer.
     - Trong hệ thống event-sourced, domain event là trung tâm để mô hình hóa tất cả trạng thái, chứ không chỉ để tích hợp. Việc buộc mọi domain event phải có subscriber sẽ dẫn đến thiết kế kém tối ưu.
-- Lựa chọn đúng loại sự kiện (Event Type)
+- Lựa chọn đúng loại *event* (Event Type)
     - Event Notification
-        - Bạn muốn thông báo cho các thành phần khác rằng một sự kiện kinh doanh đã xảy ra mà không tiết lộ trạng thái nội bộ.
-        - Consumer (bên tiêu thụ) có thể và nên tự lấy dữ liệu đầy đủ từ hệ thống nguồn dựa vào thông tin trong sự kiện.
+        - Bạn muốn thông báo cho các thành phần khác rằng một *event* kinh doanh đã xảy ra mà không tiết lộ trạng thái nội bộ.
+        - Consumer (bên tiêu thụ) có thể và nên tự lấy dữ liệu đầy đủ từ hệ thống nguồn dựa vào thông tin trong *event*.
         - Có những lo ngại về bảo mật hoặc tính thời điểm (ví dụ, dữ liệu có thể lỗi thời hoặc nhạy cảm).
-        - Hệ thống phát hành sự kiện muốn ẩn chi tiết nội bộ với các hệ thống khác.
+        - Hệ thống phát hành *event* muốn ẩn chi tiết nội bộ với các hệ thống khác.
         - Ưu điểm:
             - Payload (nội dung thông báo) nhẹ.
             - Tăng cường phân tách trách nhiệm giữa các hệ thống.
@@ -102,15 +102,15 @@
     - Domain Event
         - Bạn muốn mô hình hóa hành vi nghiệp vụ, không phải trạng thái.
         - Bạn cần ghi nhận những khoảnh khắc quan trọng trong domain, kể cả khi không có ai tiêu thụ chúng.
-        - Bạn đang sử dụng event sourcing, nơi các sự kiện là nguồn gốc của trạng thái hệ thống.
+        - Bạn đang sử dụng event sourcing, nơi các *event* là nguồn gốc của trạng thái hệ thống.
 - Chỉ những kẻ hoang tưởng mới sống sót.
     - Mạng sẽ chậm.
     - Máy chủ sẽ hỏng vào đúng thời điểm tồi tệ nhất.
-    - Sự kiện sẽ đến sai thứ tự.
-    - Sự kiện sẽ bị trùng lặp.
+    - *event* sẽ đến sai thứ tự.
+    - *event* sẽ bị trùng lặp.
     - Và quan trọng hơn hết: những điều này thường xảy ra vào cuối tuần hoặc ngày lễ.
 - Từ *driven* trong kiến trúc *event-driven* có nghĩa là toàn bộ hệ thống phụ thuộc vào việc các thông điệp (messages) được gửi đi thành công. Vì vậy, hãy tránh xa tư duy *mọi thứ sẽ ổn thôi*.
-- Phân biệt rõ giữa sự kiện công khai (public) và sự kiện riêng tư (private)
+- Phân biệt rõ giữa *event* công khai (public) và *event* riêng tư (private)
 - Đánh giá yêu cầu về tính nhất quán (consistency)
     - Nếu các thành phần có thể chấp nhận dữ liệu nhất quán sau một khoảng thời gian (eventual consistency), hãy sử dụng event-carried state transfer.
     - Nếu consumer cần đọc trạng thái mới nhất vừa được ghi của producer, hãy phát hành event notification kèm theo một truy vấn (query) đến producer để lấy trạng thái cập nhật nhất.
@@ -118,11 +118,11 @@
 # Data mesh
 
 - Cũng giống như domain events, dữ liệu phân tích là dạng chỉ-ghi (append-only): không có xoá hay chỉnh sửa. Cách duy nhất để thể hiện rằng một bản ghi đã lỗi thời là thêm một bản ghi mới với trạng thái hiện tại.
-- Một điểm khác biệt lớn nữa giữa OLAP và OLTP là độ chi tiết của dữ liệu:
+- Một điểm khác biệt lớn nữa giữa OLAP và OLTP là **độ chi tiết của dữ liệu**:
     - Hệ thống vận hành (OLTP) yêu cầu dữ liệu phải rất chi tiết để xử lý các giao dịch.
     - Trong khi đó, mô hình phân tích thường sử dụng dữ liệu đã được tổng hợp (aggregated) nhằm phục vụ các tình huống sử dụng hiệu quả hơn.
 - snowflake schema
     - các dimension được chuẩn hoá thêm thành nhiều cấp
     - Việc chuẩn hoá thêm này giúp mô hình tiết kiệm không gian lưu trữ hơn và dễ bảo trì hơn. 
     - Tuy nhiên, để truy vấn dữ liệu từ fact sẽ cần nối (join) nhiều bảng hơn, dẫn đến việc tiêu tốn nhiều tài nguyên tính toán hơn.
-- Data lake có thể trở thành data swamp (đầm lầy dữ liệu).
+- Data lake có thể trở thành **data swamp** (đầm lầy dữ liệu).
