--- a/1.0.0/n20071.md
+++ b/1.0.0/n20071.md
@@ -1,3 +1,19 @@
+**Catalog**
+
+1. [The Trouble with Distributed Systems](#the-trouble-with-distributed-systems)
+    - [Synchronous Versus Asynchronous Networks](#synchronous-versus-asynchronous-networks)
+    - [Clocks](#clocks)
+    - [Process Pauses](#process-pauses)
+    - [Limiting the impact of garbage collection](#limiting-the-impact-of-garbage-collection)
+    - [Truth, and Lies](#truth-and-lies)
+2. [Consistency and Consensus](#consistency-and-consensus)
+    - [Linearizability](#linearizability)
+    - [Implementing Linearizable Systems](#implementing-linearizable-systems)
+    - [The Cost of Linearizability](#the-cost-of-linearizability)
+    - [Ordering Guarantees](#ordering-guarantees)
+
+---
+
 # The Trouble with Distributed Systems
 
 - cần biết phần mềm phản ứng như thế nào trước sự cố mạng và đảm bảo hệ thống có thể phục hồi
