--- a/1.0.0/o6n1x2.md
+++ b/1.0.0/o6n1x2.md
@@ -1,3 +1,15 @@
+**Catalog**
+
+- [Triển khai phát sóng theo thứ tự toàn phần bằng lưu trữ tuyến tính](#trin-khai-phát-sóng-theo-th-t-toàn-phn-bng-lu-tr-tuyn-tính)
+- [Giao dịch phân tán và Đồng thuận](#giao-dch-phân-tán-và-ng-thun)
+- [Two-Phase Commit 2PC](#twophase-commit-2pc)
+- [Three-phase commit](#threephase-commit)
+- [In fact](#in-fact)
+- [Các thuộc tính của một thuật toán đồng thuận:](#các-thuc-tính-ca-mt-thut-toán-ng-thun)
+- [Membership and Coordination Services](#membership-and-coordination-services)
+
+---
+
 ## Triển khai phát sóng theo thứ tự toàn phần bằng lưu trữ tuyến tính
 
 - Thuật toán rất đơn giản: với mỗi thông điệp bạn muốn gửi qua phát sóng theo thứ tự toàn phần, bạn thực hiện increment-and-get trên thanh ghi tuyến tính, rồi gắn giá trị nhận được vào thông điệp như một số thứ tự. Sau đó bạn gửi thông điệp đến tất cả các nút (và gửi lại nếu bị mất), và các nút sẽ xử lý thông điệp theo đúng thứ tự số thứ tự.
