--- a/1.0.0/4mw4a3.md
+++ b/1.0.0/4mw4a3.md
@@ -22,6 +22,7 @@
     - [row-based](#rowbased)
     - [Replication lag](#replication-lag)
     - [Multi-Leader Replication](#multileader-replication)
+    - [Leaderless Replication](#leaderless-replication)
 
 ---
 
